# lem-dev

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.envs/local/: django.env  postgres.env
.github/workflows/: ci.yml
backend/: manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/apps/: conftest.py
backend/apps/books/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/books/migrations/: 0001_initial.py  0002_author_alter_book_genre_book_author.py  0003_remove_book_isbn_id_remove_book_catalog_number_and_more.py  0004_book_genre.py  0005_alter_review_book.py  0006_alter_book_options_author_user_book_created_and_more.py  0007_book_isbn_id_book_catalog_number_book_dimensions_and_more.py  0008_rename_author_book_authors_rename_genre_book_genres.py
backend/apps/forum/: apps.py  managers.py  models.py
backend/apps/forum/migrations/: 0001_initial.py  0002_alter_post_slug_alter_post_title.py
backend/apps/forum/tests/: factories.py  test_models.py
backend/apps/generic/: admin.py  apps.py  managers.py  models.py  serializers.py  views.py
backend/apps/generic/migrations/: 0001_initial.py  0002_reaction_delete_like.py  0003_alter_reaction_object_id.py  0004_reaction_created_reaction_modified_and_more.py  0005_rename_body_comment_content_review.py
backend/apps/generic/tests/: factories.py  test_models.py
backend/apps/likes/: apps.py
backend/apps/news/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/news/migrations/: 0001_initial.py  0002_alter_comment_options_alter_file_options_and_more.py  0002_alter_tag_slug.py  0003_news_slug.py  0003_remove_highlight_content_type_remove_highlight_user_and_more.py  0004_alter_comment_options_alter_file_options_and_more.py  0004_rename_body_news_content.py
backend/apps/news/tests/: factories.py  test_models.py
backend/apps/users/: admin.py  apps.py  models.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/tests/: factories.py  test_admin.py
backend/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  testing.py
backend/docker/start_scripts/: celery_flower.sh  celery_worker.sh
docker/: Dockerfile  entrypoint.sh
docker/start_scripts/: celery_beat.sh  celery_flower.sh  celery_worker.sh
frontend/: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  cypress.config.ts  generate_eslint_dependencies.py  next.config.js  package-lock.json  package.json
frontend/docker/: Dockerfile
frontend/pages/: _app.tsx  index.tsx  indexHome.cy.tsx
