[tool.poetry]
name = "lem"
version = "0.1.0"
description = ""
authors = ["Kacper Stypik <kacper@stypik.pl>", "Karol Bautrel <karol.bautrel@gmail.com>"]
license = "GNU General Public License v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
