[tool.poetry]
name = "lem"
version = "0.1.0"
description = ""
authors = ["Kacper Stypik <kacper@stypik.pl>", "Karol Bautrel <karol.bautrel@gmail.com>"]
license = "GNU General Public License v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
django-environ = "^0.9.0"
drf-spectacular = "^0.24.2"
django-cors-headers = "^3.13.0"
django-celery-beat = "^2.4.0"
dj-rest-auth = {extras = ["with-social"], version = "^2.2.5"}
djangorestframework-simplejwt = "^5.2.2"
django-extensions = "^3.2.1"
flower = "^1.2.0"
watchfiles = "^0.18.1"
redis = "^4.3.4"
hiredis = "^2.0.0"
argon2-cffi = "^21.3.0"
werkzeug = {extras = ["watchdog"], version = "^2.2.2"}
markdown2 = "^2.4.6"
pillow = "^9.3.0"
mdgen = "^0.1.10"
martor = "^1.6.15"
pytest-factoryboy = "^2.5.1"

[tool.poetry.group.production]
optional = true

[tool.poetry.group.production.dependencies]
psycopg2 = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
ipython = "^8.6.0"
django-debug-toolbar = "^3.7.0"
werkzeug = "^2.2.2"
dlint = "^0.13.0"
flake8-warnings = "^0.4.0"
flake8-class-attributes-order = "^0.1.3"
flake8-comprehensions = "^3.10.1"
flake8-newspaper-style = "^0.4.3"
flake8-debugger = "^4.1.2"
flake8-no-implicit-concat = "^0.3.4"
flake8-no-pep420 = "^2.3.0"
flake8-print = "^5.0.0"
flake8-absolute-import = "^1.0.0.1"
flake8-pytest-style = "^1.6.0"
flake8-django = "^1.1.5"
flake8-bugbear = "^22.10.27"
flake8-simplify = "^0.19.3"
coverage = "^6.5.0"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"
faker = "^15.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = "apps,config"
multi_line_output = 3
default_section = "THIRDPARTY"
skip = "venv/"
skip_glob = "**/migrations/*.py"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
